--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  firebase_core: ^0.4.4+2
+  firebase_auth: ^0.15.5+2
+  cloud_firestore: ^0.13.4+1
+  firebase_analytics: ^5.0.11
+
+  provider: ^4.0.4
+  
+  get_it: ^4.0.0
+  
+  curved_navigation_bar: ^0.3.2
+  
+  rxdart: ^0.23.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
