--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   
   get_it: ^4.0.0
   
-  curved_navigation_bar: ^0.3.2
+  line_icons: ^0.2.0
+  google_nav_bar: ^2.0.0
   
   rxdart: ^0.23.1
 
