--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_auth: ^0.15.5+2
   cloud_firestore: ^0.13.4+1
   firebase_analytics: ^5.0.11
+  google_fonts: ^0.3.9
 
   provider: ^4.0.4
   
