--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cloud_firestore: ^0.13.4+1
   firebase_analytics: ^5.0.11
 
+  google_fonts: ^0.3.9
+
   provider: ^4.0.4
   
   get_it: ^4.0.0
@@ -55,8 +57,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -71,11 +73,15 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  #  - family: Inter
+  #    fonts:
+  #      - asset: assets/fonts/Inter/Inter-Light.ttf
+  #      - asset: assets/fonts/Inter/Inter-Regular.ttf
+  #      - asset: assets/fonts/Inter/Inter-Italic.ttf
+  #      - asset: assets/fonts/Inter/Inter-Medium.ttf
+  #      - asset: assets/fonts/Inter/Inter-SemiBold.ttf
+  #      - asset: assets/fonts/Inter/Inter-Bold.ttf
+  #      - asset: assets/fonts/Inter/Inter-Black.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
