--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_map: ^0.8.2 
+  location: ^2.5.0
+  flutter_mapbox_navigation: ^0.0.10
 
 dev_dependencies:
   flutter_test:
