--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -34,7 +34,8 @@ dependencies:
   line_icons: ^0.2.0
   google_nav_bar: ^2.0.0
   
-  rxdart: ^0.23.1
+
+  connectivity: ^0.4.8+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
